Fixed the app icon so that it’s visible even in mobile mode.

--- a/less/theme2.less
+++ b/less/theme2.less
@@ -592,7 +592,7 @@ a.top-btn:hover, a.top-btn:focus {
 	
 	.brand__forename {
 		font-size: 22px;
-		margin-left: 0px;
+		//margin-left: 0px;
 	}
 
 	.flex-row-nowrap {
